--- a/f.html
+++ b/f.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1>hello world</h1>
+        <h1 style="color:blue">hello world</h1>
         <p>hey</p>
         <h2>everyone<h2>
         <h1>i am mahesh</h1>
