--- a/f.html
+++ b/f.html
@@ -7,6 +7,7 @@
     <style>
         h1{
             color: blueviolet;
+            justify-content: center;
         }
         p{
             background-color: black;
