everyone and all

--- a/f.html
+++ b/f.html
@@ -17,7 +17,7 @@
     <div>
         <h1 style="color:blue;">hello world!!</h1>
         <p>hey</p>
-        <h2>everyone<h2>
+        <h2>everyone,and all<h2>
         <h1>i am mahesh</h1>
         <h1>i don't know</h1>
     </div>
